# bobbbay

./: .gitattributes  .gitignore  README.explanation.md  README.md  README.org  flake.nix  package-lock.json  package.json
.github/workflows/: wakatime-api.yml
content/articles/: example-two.org
content/notes/: 20220608222833-programming_languages.org  20220608223041-emacs_lisp.org  20220608223239-rust.org  20220608223315-scheme.org  20220608223805-haskell.org  20220609223122-mathematics.org  20220609223209-trigonometry.org  20220609223430-sine_law.org  20220610015601-sum_of_angles.org  20220612154154-similarity_congruence_of_triangles.org  20220612161941-primary_trigonometrric_ratios.org  20220614135226-sequences_and_series.org  20220817214907-daily_schedule.org  20220829204133-fif3dq.org  20220829205421-org.org  20220914191752-sch3dy.org  20220914195027-ttj3c1.org  handbook.org
content/static/stylesheets/: colors.scss  fonts.scss  style.scss
crates/bobbbay/: Cargo.toml
crates/bobbbay-database/: Cargo.toml
crates/bobbbay/src/: articles.rs  build.rs  error.rs  extensions.rs  main.rs  util.rs
crates/bobbbay/src/util/: logging.rs
src/interests-gen/: Cargo.toml
src/interests-gen/data/: data.json
src/interests-gen/src/: main.rs
src/wakatime-api/: README.md  index.js  package-lock.json  package.json
src/wakatime-api/data/: colors.json  data.csv
templates/: article.tera  error.tera  index.tera  note.tera  serie.tera
templates/includes/: header.tera
