[package]
name = "bobbbay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
color-eyre = "0.6.2"
fs_extra = "1.3.0"
glob = "0.3.1"
grass = "0.13.1"
lazy_static = "1.4.0"
pandoc = "0.8.10"
serde = "1.0.188"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tera = "1.19.1"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.17"

[package.metadata.nix]
build = true
